--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 confusable-homoglyphs==3.3.1
 Django==5.0.6
 django-cors-headers==4.4.0
+django-debug-toolbar==4.4.6
 django-registration==3.4
 djangorestframework==3.15.2
 python-decouple==3.8
