--- a/binge_hub/requirements.txt
+++ b/binge_hub/requirements.txt
@@ -1,3 +1,4 @@
+arrow==1.3.0
 asgiref==3.8.1
 click==8.1.7
 colorama==0.4.6
@@ -9,8 +10,13 @@ django-redis==5.4.0
 django-registration==3.4
 django-rq==2.10.2
 djangorestframework==3.15.2
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 redis==5.0.7
-rq==1.16.2
+rq==1.15.1
+rq-win @ git+https://github.com/michaelbrooks/rq-win.git@c6e65e38f8a6ca99a0c8e0dd6fe35f9b92837cca
+six==1.16.0
 sqlparse==0.5.0
+times==0.7
+types-python-dateutil==2.9.0.20240316
 tzdata==2024.1
